
Slick 7.x-2.0-dev, 2015-5-25
----------------------------
Removed over paranoid slick_filter_xss_admin() since Views UI has a more
  flexible "Rewrite results" option with selective tags stripping.
Deprecated slick_get_default_value(), used slick_get_options() instead.
  The function is temporarily moved to slick.admin.inc for future deletion.
Moved unused slick_optionset_load_all() into slick.admin.inc.
Removed slick_add(), recommended to start using #attached with slick_attach()
  instead. This is never used and will be dropped at D8 anyway.
Removed unused slick_image_default_styles(), including default slick image
  style, and moved it to slick_example.module instead.
Removed useless _slick_gettype().

Issue #2494579 by gausarts: Merge slick.elements.inc contents into the module,
  and clean out unused functions.

Slick 7.x-2.0-dev, 2015-5-24
----------------------------
Fixed for skin fullscreen after slick-wrapper removal.

Slick 7.x-2.0-dev, 2015-5-23
----------------------------
Issue #2479199 by gausarts: Drop wasted slick-wrapper when no asNavFor in use.

Slick 7.x-2.0-dev, 2015-5-19
----------------------------
Issue #2490528 by fragtom: Variable with doesn't display right.
Notes:
- variableWidth is not compatible with slidesToShow > 1 if the container is
  smaller than the amount of visible slide widths.
  Best with uniform image heights to avoid jumpy empty space. Use scale height
  image effect, and keep width empty/dynamic.
  Useless with adaptiveHeight, and non-uniform image heights.
  Useless with slidesToShow > 1 if the container is smaller than the amount of
  visible slides.
  Troubled with lazyLoad ondemand. Use progressive or none instead.
- adaptiveHeight wants single visible slide (slidesToShow 1).
  Useless with variableWidth.


Slick 7.x-2.0-dev, 2015-5-13
----------------------------
Fixed for slick_remove_wasted_dependent_options() not removing dependents.

Slick 7.x-2.0-dev, 2015-5-2
---------------------------