@@ -1,6 +1,6 @@
-.slick-wrapper *,
-.slick *::before,
-.slick *::after {
+.slick-wrapper,
+.slick,
+.slick * {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -o-box-sizing: border-box;
