@@ -33,3 +33,96 @@ supports no-js, otherwise IMG tag with dummy placeholder. */
     max-width: 100%;
   }
 }
+
+.draggable {
+  cursor: grab;
+  cursor: -webkit-grab;
+  &:active {
+    cursor: grabbing;
+    cursor: -webkit-grabbing;
+
+    a,
+    .slide__caption {
+      cursor: grabbing;
+      cursor: -webkit-grabbing;
+      @include user-select(none);
+    }
+  }
+}
+
+.media,
+.slide__media  {
+  overflow: hidden;
+  position: relative;
+}
+
+.slick__image {
+  margin: 0 auto;
+  // width: 100%;
+}
+
+/**
+ * Skins.
+ */
+.slide__content {
+  @include pie-clearfix;
+}
+
+.slide__title {
+  margin: 10px 0 5px;
+  line-height: 1.2;
+  .slick--carousel & {
+    @include font-size(22px);
+  }
+}
+
+.slide__link {
+  margin: $vert-spacing-unit auto;
+  text-transform: uppercase;
+
+  .field-item {
+    display: inline-block;
+    vertical-align: top;
+    a {
+      display: block;
+      padding: 5px 10px;
+    }
+  }
+}
+
+.slide__pattern {
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 0;
+  pointer-events: none;
+
+  // Overrides accordingly.
+  .slick--has-pattern & {
+    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADAQMAAABs5if8AAAAA3NCSVQICAjb4U/gAAAABlBMVEUAAAD///+l2Z/dAAAAAnRSTlP/AOW3MEoAAAAJcEhZcwAACusAAArrAYKLDVoAAAAWdEVYdENyZWF0aW9uIFRpbWUAMjUvMDQvMTHvvlk6AAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M1cbXjNgAAAA5JREFUCJljSGB4wPAAAAVmAiGdUf+vAAAAAElFTkSuQmCC') repeat 0 0;
+  }
+}
+
+/**
+ * Bullets.
+ */
+/* Overrides too tiny bullets from core slick.css */
+// I don't like dots styling, should be pure CSS, but leave it for now.
+.slick-dots li button::before {
+  @include font-size(12px);
+}
+
+/* Overrides .slick-slider to make caption text selectable. */
+.slide__caption {
+  cursor: text;
+  @include user-select(text);
+}
+
+/* Fix excessive height with ondemand lazyLoad prior to being visible */
+.slick--ondemand .slick__slide:not(.slick-active) img[data-lazy] {
+  width: 40px;
+  height: 40px;
+}
