@@ -42,7 +42,6 @@
       display: block;
     }
   }
-
 }
 
 @include breakpoint($breakpoint-start, true) {
