@@ -16,11 +16,13 @@
  * of it, see README.txt on slick_fields.module for possible Slide layouts using
  * a field with Field collection.
  *
- * Each skin supports 4 keys:
+ * Each skin supports 5 keys:
  * - name: The human readable name of the skin.
  * - description: The description about the skin, for help and manage pages.
  * - css: An array of CSS files to attach.
  * - js: An array of JS files to attach.
+ * - inline css: An optional flag to determine whether the image is turned into
+ *   CSS background rather than image with SRC, see fullscreen skin.
  *
  * @see hook_hook_info()
  * @see https://drupal.org/node/1887922
@@ -62,6 +64,7 @@ function slick_slick_skins_info() {
       'css' => array(
         $module_path . '/css/theme/slick.theme--fullscreen.css' => array('weight' => 4),
       ),
+      'inline css' => TRUE,
     ),
     'fullwidth' => array(
       'name' => t('Full width'),
