@@ -1,0 +1,14 @@
+<?php
+/**
+ * @file
+ * Provides the Slick carousel export UI.
+ */
+
+/**
+ * Implements hook_ctools_plugin_directory().
+ */
+function slick_ui_ctools_plugin_directory($module, $plugin) {
+  if ($plugin == 'export_ui') {
+    return 'plugins/' . $plugin;
+  }
+}
